# F1-Race-Strategy

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: streamlit_app.py
src/f1predict/: config.py  data.py  features.py  modeling.py  train.py  utils.py
tests/: test_features.py  test_modeling.py
